[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.6"
structopt = "0.3.25"
tokio = { version = "1.11.0", features = ["full"]}
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"